[package]
name = "adav2"
version = "0.1.0"
authors = ["trunkyredstone <romano@lucchesi.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
tokio = { version = "0.2", features = ["macros"] }
config = "0.10.1"

