[package]
name = "adav2"
version = "1.1.8"
authors = ["trunkyredstone <romano@lucchesi.co.uk>"]
edition = "2018"

[dependencies]
serenity = { version = "0.9.0-rc.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
tokio = { version = "0.2", features = ["macros"] }
config = "0.10.1"
mysql = "20.1.0"